# tub

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
static/default_css/: CSS_USAGE_GUIDE.md  default.css
static/default_js/: default.js
templates/: default_template.html  docker_compose_tutorial.html  docker_tutorial.html  linux_essentials.html  mcp_rag.html  nextjs_tutorial.html  opencv.html  python_advanced.html  python_basics.html  python_decorators.html  python_files.html  python_functional.html  python_hub.html  python_iterators.html  python_modules.html  python_oop.html  python_pandas_advanced.html  python_plotly.html  python_postgres.html  react_native_tutorial.html  tailwind_templates.html  tailwinds.html  traefik_proxy.html
tub/: app.py  cli.py  config.py
