[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tub-hub"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "tomli; python_version < '3.11'",
]

[project.scripts]
tub = "tub.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["templates/**/*", "static/**/*"]
